# Python-Vue

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  __main__.py
app/configuration/: __init__.py  server.py
app/internal/pkg/models/: __init__.py  route.py  route_package.py
app/internal/repositories/: __init__.py  repository.py
app/internal/repositories/postgres/: __init__.py  connection.py  employees.py
app/internal/repositories/postgres/handlers/: __init__.py  (+1 more)
app/internal/routes/: __init__.py  default.py  employees_all.py  employees_create.py  employees_update.py
app/internal/services/: __init__.py  employer.py
app/pkg/connectors/: __init__.py  base_connector.py  postgres.py
app/pkg/models/base/: __init__.py  api_exception.py  model.py
app/pkg/models/core/: __init__.py  containers.py
app/pkg/models/exceptions/: repository.py
app/pkg/models/pydantic/: employees.py
app/pkg/settings/: __init__.py  settings.py
docker/app/: Dockerfile
docker/frontend/: Dockerfile
docker/migrations/: Dockerfile
docker/postgres/: Dockerfile
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: main.js
frontend/src/components/: Employee.vue
frontend/src/components/UI/: ModalView.vue
migrations/: 20230211_01_UyNA1T-create-employees-table.py  20230211_01_UyNAT-create-employees-table.py
scripts/: init.postgres.sh  migrate.py
src/: App.vue
src/components/: EmployeeCreate.vue  EmployeeList.vue  EmployeeUpdate.vue  index.js
src/components/UI/: index.js
